Refactor SQL seed data and update FaroConfig instructions for clarity